--- a/_i18n/en/_posts/2020-02-17-我在-CSIS-說了什麼.md
+++ b/_i18n/en/_posts/2020-02-17-我在-CSIS-說了什麼.md
@@ -1,23 +1,23 @@
 ---
   layout: "post"
-  title: "Apple Column: What I said at CSIS"
-  excerpt: "Not only is Taiwan being interfered, the same threat is also an issue that all democratic societies must face up to."
+  title: "What I said at CSIS"
+  excerpt: "Not only is Taiwan being interfered with, the same threat is also an issue that all democratic societies must face up to."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/f/f9e54b4ab563a8caa2bf15bf68147f913913eeb2_2_1380x386.jpeg"
-  author: "唐鳳、黃子維"
+  author: "Audrey Tang, Zach Huang"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
 
- 🌐 At the morning of the 11th Eastern Time, I was invited by the Washington Think Tank Center for Strategic and International Studies (CSIS) to attend a seminar on &quot;PRC Interference in Taiwan&#39;s Election&quot; The meeting, together with Professor Shen Boyang, also from Taiwan, and a number of American experts, discussed the methods, objectives and feasible countermeasures of the CCP&#39;s intervention. Below, I also share with readers the highlights of my report for the day. 
+🌐 On the morning of the 11th, US Eastern Time, I was invited by the Washington Think Tank “Center for Strategic and International Studies (CSIS)” to attend the “PRC Interference in Taiwan's Election” seminar. With Professor Puma Shen of Taiwan and several American experts, we discussed the methods, objectives, and feasible countermeasures of the CCP's intervention. Below, I will share the highlights of my report for the day.
 
- 🔥 First, the ultimate goal of the CCP&#39;s intervention is to divide the society, reduce the mutual trust of internal members, and trust in the democratic system, and then affect the public&#39;s understanding of objective facts and core interests. This is a cumulative process. The results of an election cannot be concluded or put to a stop. Otherwise, the relevant intervention should come to an end after the election. However, the facts tell us that this is not the case. 
+🔥 First, the ultimate goal of the CCP's intervention is to divide the society, reduce the mutual trust of internal members and the trust in democratic systems, and then affect the public's understanding of facts and core interests. This is a cumulative process, and the results of a single election won't stop it conclusively. Otherwise, the relevant intervention should come to an end after the election. However, the facts tell us that this is not the case.
 
- 🚸 Secondly, both in combating false information and recent experience of &quot;mask supply and demand information platform&quot;, we can find that when the government formulates policies and faces problems, it expands public participation and uses open data and other methods to make Folk energies play more roles, which can not only achieve the goal more quickly and comprehensively, but also the mutual trust and friendship accumulated in the process, it is also a good medicine against the means of differentiation. 
+🚸 Secondly, both in countering disinformation and recent experience in "mask supply and demand information platform," we see how expanding public participation and using open data to empower citizens not only achieved policy goals more quickly and comprehensively, but also accumulated mutual trust and friendship in the process, safeguarding the society from divisiveness.
 
- 🗳️ In addition, the above-mentioned process of rebuilding mutual trust does not necessarily need to rely on high technology or more budget. The government&#39;s attitude is the focus. For example, despite the many disturbances in the Taiwan election process, the invoicing process and the results of counting votes have maintained a high level of credibility since the direct presidential election was opened. The key lies in the openness and transparency of the invoicing process. Anyone who wishes to vote can go to the nearby ticket office to participate in person, and since the 2016 presidential election, the people can also record images when they vote, so more people can join from a distance. With participation and truth, &quot;the space for spreading election rumors is reduced. 
+🗳️ In addition, the above-mentioned process of rebuilding mutual trust does not necessarily need to rely on high technology or extra budget. The government's attitude is the key. For example, although there are many disturbances in the Taiwan election process, the balloting process and counting results have maintained a high level of credibility since the direct presidential election was opened. The key lies in the openness and transparency of the invoicing process. Anyone who intends to scrutinize votes can go to the nearby ticket office to participate in person. And since the 2016 presidential election, participants can take videos while scrutinizing votes, which allows more people to get involved from afar. With "participation and truth," the room for spreading election rumors is reduced.
 
- 🗽 Not only is Taiwan being interfered with, the same threat is also an issue that all democratic societies must face up to. From February 19th to 20th, experts from various countries are coming to Taiwan to participate in the &quot;US-Taiwan Tech Challenge&quot; sponsored by the US State Department to discuss and exchange cases, tools and methods to prevent the harm of fake information. Virtue is not lonely, there must be neighbors, I believe that all partners participating in the meeting will be able to gain something and contribute. 
+🗽 Not only is Taiwan being interfered with, the same threat is also an issue that all democratic societies must face up to. From February 19th to 20th, exports from various countries are coming to Taiwan to participate in the "U.S.-Taiwan Tech Challenge" hosted by the US State Department to discuss and exchange cases, tools, and methods to prevent the harm of disinformation. "Virtue is not left to stand alone. One who practices it will have neighbors." I believe that all partners participating in the meeting will certainly be able to gain and contribute.
 
-| <iframe width="560" height="315" src="https://www.youtube.com/embed/01Ks2xiHxnI" frameborder="0" allowfullscreen></iframe> 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/01Ks2xiHxnI" frameborder="0" allowfullscreen></iframe>
