--- a/_i18n/en/_posts/2020-02-18-我們如何為登山申請打造一站式服務系統.md
+++ b/_i18n/en/_posts/2020-02-18-我們如何為登山申請打造一站式服務系統.md
@@ -56,7 +56,7 @@ figure {
 
  The students then summarized the opinions collected in the interview and incorporated them into the prototype design. [Use Low-Fidelity Prototype (Wireframe)](https://en.wikipedia.org/wiki/website_wireframe) invites interviewees to test the newly designed interface and evaluate its benefits by using service process design methods. after many iterations, the students of the ray project eventually produced [mockup of the system interface](https://en.wikipedia.org/wiki/mockup), as a reference for the subsequent system development. 
 
-| <figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/8/88dfc925a04f11d60c705fb4b5454df314b8b46b_2_991x565.png"><figcaption> Figure 2. System prototype produced by the RAY project. The picture is the homepage, [click here](https://xd.adobe.com/view/d99a87d9-9e9d-45bb-6bc7-e72798977083-afab/?fullscreen) There is a Demo webpage that can interact online </figcaption></figure> 
+| <figure><img alt="image" src="https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/8/88dfc925a04f11d60c705fb4b5454df314b8b46b_2_991x565.png"><figcaption> Figure 2. System prototype produced by the RAY project. The picture is the homepage, <a href="https://xd.adobe.com/view/d99a87d9-9e9d-45bb-6bc7-e72798977083-afab/?fullscreen" target="_blank">click here</a> There is a Demo webpage that can interact online </figcaption></figure> 
 
  ## The challenge of integrating information systems across departments 
 
