--- a/_i18n/en/_posts/2020-03-02-新一屆-PO-報到.md
+++ b/_i18n/en/_posts/2020-03-02-新一屆-PO-報到.md
@@ -1,24 +1,24 @@
 ---
   layout: "post"
-  title: "Apple Column: New PO Registration"
+  title: "New PO reports for duty"
   excerpt: "It is more important for the government and the people to move forward together than to make two separate steps on either side."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/d/dc785f09fe2ae0b5b49e8a4efcbb870737b435b0_2_1380x500.jpeg"
-  author: "唐鳳、黃子維"
+  author: "Audrey Tang, Zach Huang"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+🙋 PO is an abbreviation of "Participation Officer (PO)" of the Inter-Ministerial Council of the Executive Yuan. Just like the "Congressional Liaison" responsible for coordinating with legislators, the "Media Contact" is responsible for communicating with the media. According to the "[Directions for Implementing the Role of Participation Officers in the Executive Yuan and Subordinate Agencies](https://po.pdis.nat.gov.tw/en/)":
 
- 🙋 PO is the abbreviation of "Participation Officer" of the Inter-Ministerial Council of the Executive Yuan. Just like the "Congressional Liaison" who has been in charge in the past for coordinating with legislators, the "Media Liaison" is responsible for communicating with the media, based on ["Executive Points for the Opening of Government Liaison by the Executive Yuan and Its Subsidiaries"](https: / /po.pdis.nat.gov.tw/ 
-): 
+📲 "During the policy formulation and promotion process, each government agency shall give full consideration to transparency, participation, accountability, inclusion and other basic principles of open government. If complex stakeholder relationships, multiple differences of opinion or issues of intense public participation are involved, the PO shall assist the head of the agency concerned to assess in the initial stage of policy planning whether the agency should adopt an appropriate process upholding the principle of open government."
 
- 📲 "Each government should fully consider the basic principles of open government such as transparency, participation, accountability, and tolerance in the process of promoting policy formation. For complex issues, divergent opinions, or enthusiastic public participation, open government liaisons should assist the heads of the agencies in assessing whether appropriate procedures should be practiced in the early stages of policy planning in accordance with the principles of open government. " The core function of the PO is to become a bridge for communication between the government and the people at an appropriate time. The biggest challenge also arises because "not specific" means that the communication mode must be tailored to the case and cannot be restricted to one-and-a-half methods; and "multiple" means that it is more difficult to integrate and balance opinions. Therefore, how to design a good mechanism so that all parties can listen to each other calmly is the biggest challenge of being a PO. 
+🎨 To put it simply, the PO's core function is to act as a bridge of communication between the government and the people through an open multi-stakeholder model. This also raises the biggest challenge because "open" means that the communication mode must be tailored to each case and cannot be restricted to a single method; whereas "multi-stakeholder" means that it is quite difficult to integrate and balance the opinions. Therefore, the biggest challenge of being a PO is working out how to design a sound mechanism to ensure that all parties listen to each other calmly.
 
- 📅 According to the Essentials, the ministries "should assign at least one person of the appropriate level and sufficient authority to act as an open government liaison." Therefore, starting from 2017, each beginning of the year will become the point of registration for the new session of the PO (including initial and renewal). In addition, with the expansion and deepening of the open government business, more and more third-level organs of the ministry will also assign special personnel to serve as POs. After all, when discussing many issues, the department, department, bureau, and department levels serve as windows, which can better meet the key and shorten the communication process. 
+📅 According to rules of the "Directions", each ministry "shall designate at least one person of appropriate rank and full authorization to act as PO". For this reason, since 2017, the beginning of each year has also been the time when a new PO reports for duty (whether the term is initial or renewed). Furthermore, with the expansion and deepening of the work of open government, more and more level three subordinate agencies of the ministries are also assigning special personnel to serve as POs. After all, when discussing multiple issues, having the division, department, bureau and station levels serve as windows can better reach the key points and shorten the communication process.
 
- ✍️ This year's new PO has another task that is different from the past, that is, assisting the affiliated ministries to plan "[National Action Plan (NAP)](https: // www.ndc.gov.tw/content_list.aspx?n=0c5ab1d0fa5b64b8&upn=97ad5aa9359cab38). " 
+✍️ This year's new PO has another task that is different from that of the past, namely, to assist its relevant ministry in planning the "[National Action Plan](https://www.ndc.gov.tw/Content_List.aspx?n=0C5AB1D0FA5B64B8&upn=97AD5AA9359CAB38)" (NAP) of Open Government.
 
- 👍 Under the leadership of Chairman Chen Meiling of the National Development Council, various ministries have taken stock of "maximizing open data value-added applications", "expanding public participation in public policy mechanisms", "increasing gender and ethnic inclusion dialogue", " Implementation of the five major commitments such as clean governance, implementation of money laundering and prevention, and public opinion consultation on the Join public platform, demonstrating the determination to continue to promote open government, and actively participating in the international organization, the Open Government Partnership Alliance Partnership, OGP). 
+👩‍🏫 Under the leadership of Chen Mei-ling, Chairperson of the National Development Council, various ministries have taken stock of the five major issues of "maximizing open data value-added applications", "expanding public participation in public policy mechanisms", "increasing dialogue on gender and ethnic inclusion", "implementing clean governance" and "implementing money laundering prevention", and have invited public consultation on the "Join Public Speaking" platform. This demonstrates the determination for the continual promotion of open government and the will to actively participate in the international organization, Open Government Partnership (OGP).
 
- 🚸 Of course, the focus of an open government does not end with the government's unilateral commitment, but also with the dialogue, mutual trust, and cooperation between the government and the people. It is more important for the government and the people to move forward together than to make two separate steps on either side. 
+🚸 Of course, the focus of opening up the government does not end with a unilateral commitment from the government. It also involves dialogue, mutual trust and cooperation between the government and the people. It is more important for the government and the people to take one step forward together rather than for either side to take two steps forward on their own.
