--- a/_posts/project/2017-09-10-ray2017.md
+++ b/_posts/project/2017-09-10-ray2017.md
@@ -2,7 +2,7 @@
 layout: post
 title: 青年學生體檢政府網站數位服務專案
 excerpt: 透過「大專學生公部門見習計畫」招募青年學生協作，檢核「行政院所屬的二、三級機關網站」，是否相容於 Safari。
-image: https://github.com/PDIS/ray2019/blob/master/src/assets/images/background.png?raw=true
+image: https://github.com/PDIS/ray2019/blob/master/src/assets/images/background.jpg?raw=true
 author: 簡就可
 category: project
 tags: [RAY, 青年參與, UI, UX]
