--- a/_i18n/en/_posts/2020-03-02-新一屆-PO-報到.md
+++ b/_i18n/en/_posts/2020-03-02-新一屆-PO-報到.md
@@ -21,4 +21,6 @@
 
 👩‍🏫 Under the leadership of Chen Mei-ling, Chairperson of the National Development Council, various ministries have taken stock of the five major issues of "maximizing open data value-added applications", "expanding public participation in public policy mechanisms", "increasing dialogue on gender and ethnic inclusion", "implementing clean governance" and "implementing money laundering prevention", and have invited public consultation on the "Join Public Speaking" platform. This demonstrates the determination for the continual promotion of open government and the will to actively participate in the international organization, Open Government Partnership (OGP).
 
-🚸 Of course, the focus of opening up the government does not end with a unilateral commitment from the government. It also involves dialogue, mutual trust and cooperation between the government and the people. It is more important for the government and the people to take one step forward together rather than for either side to take two steps forward on their own.
+🚸 Of course, the focus of opening up the government does not end with a unilateral commitment from the government. It also involves dialogue, mutual trust and cooperation between the government and the people.
+
+👣 It is more important for the government and the people to take one step forward together rather than for either side to take two steps forward on their own.
