--- a/_i18n/zh-TW/_posts/2020-03-02-新一屆-PO-報到.md
+++ b/_i18n/zh-TW/_posts/2020-03-02-新一屆-PO-報到.md
@@ -22,4 +22,6 @@ tags:
 
 👍 在國發會陳美伶主委的領導下，各部會已盤點「極大化開放資料加值應用」、「擴大民眾參與公共政策機制」、「增加性別及族群包容性對話」、「落實清廉施政」、「執行洗錢防制」等五大承諾事項，並於「Join 眾開講」平台進行公開意見諮詢，展現持續推動開放政府的決心，以及積極參與國際組織—開放政府夥伴聯盟（Open Government Partnership, OGP）的意願。
 
-🚸 當然，開放政府的重點，不僅止於政府單方面的承諾，而在於政府與民間的對話、互信與合作。政府與民間一起前進一步，比任何一方單獨前進兩步，來的更重要。
+🚸 當然，開放政府的重點，不僅止於政府單方面的承諾，而在於政府與民間的對話、互信與合作。
+
+👣 政府與民間一起前進一步，比任何一方單獨前進兩步，來的更重要。
