--- a/_i18n/en/_posts/2020-03-12-不只防肺炎-也要治謠言.md
+++ b/_i18n/en/_posts/2020-03-12-不只防肺炎-也要治謠言.md
@@ -1,25 +1,24 @@
 ---
   layout: "post"
-  title: "Shang Zhou Column: Not only to prevent pneumonia, but also to cure rumors"
-  excerpt: "Add the \"Anti-Fraud\" LINE account as a friend, forward suspicious information to it, and the robot will verify if it is fraudulent information."
+  title: "Dr.Message counters disinformation"
+  excerpt: "Add its LINE account as a friend and forwards suspicious messages to it, and the bot will verify whether it is false."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/0/016210424bb02ab250b184c71c1a21671bc4b5a8_2_1380x920.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+💊 Recently, the world is paying the most attention to developments in the epidemic situation. From medical care to public health policy, it has been the subject of much attention. With the people of Taiwan working for a common goal, we have made preliminary results in controlling the spread of the virus, but false information that endangers the epidemic prevention efforts has become a serious issue facing many countries. 
 
- 💊 The recent development of the epidemic situation is the world's most concerned thing. From medical care to public health policy, it is the focus of much attention. With the concerted efforts of everyone, Taiwan has achieved initial results in its efforts to control the spread of the virus, and the false information that endangers the epidemic prevention efforts has also become a pressing issue facing many countries. 
+💡 The good news is that Taiwan's efforts to prevent the harmful effects of false information have once again attracted the attention of international partners. At the end of February, the American Institute in Taiwan (AIT), the US State Department's Global Engagement Center, Park Advisors, along with the Institute for Information Technology, have co-hosted the "US-Taiwan Tech Challenge" for the first time. The "Dr. Message" chatbot, developed by TrendMicro engineers won first prize, standing out in a field of teams that included Israel and Australia. 
 
- 💡 It is gratifying that Taiwan's efforts to prevent the harm of fake information have once again attracted the attention of international friends. At the end of February, the American Institute in Taiwan (AIT), the US Department of State's Global Engagement Center, Park Advisors, and the Institute of Assets and Technology Association jointly hosted the "US-Taiwan Technology Challenge" for the first time, developed by Trend Micro engineers The "[Fraud Master](https://www.getdr.com/)" chat bot has stood out from teams from many countries including Israel and Australia, winning the first prize in one fell swoop. 
+📲 The 'birth' of Dr.Message arose from Liu Yanbo and several engineer colleagues at TrendMicro, all of whom had been affected by fake news and texts. After a group discussion, they decided to spend time after work developing their own fraud prevention and anti-fake news tools. Users just need to add the Dr.Message LINE account as a friend and forwards suspicious messages to it, the bot will verify whether it is false. 
 
- 📲 The birth of the master of fraud prevention originated from the fact that Liu Yanbo and several engineer colleagues working at Trend Micro had suffered from the fraud. After discussion, they decided to use their off-hours to develop their own fraud prevention tools. As long as the user adds the "Anti-Fraud" LINE account as a friend and forwards suspicious messages to it, the robot will verify whether it is fraudulent information. 
+🖼️ The team then discovered that many of the fake messages systematically appeared in fraudulent groups, and then decided to expand the service to identify false messages. In order to respond to various types of fraudulent and false information, Dr.Message can not only detect the text, but also identify information such as stickers or links, and even supports group identification. After adding the account to the group, Dr.Message can view the group Links and messages inside.
 
- 🖼️ The team then discovered that many fake messages appeared systematically in the fraud community, so they decided to expand the service to identify fake messages. In order to respond to various types of fraud and false information, the fraud prevention expert can not only detect the text, but also can identify information such as stickers or links, and even supports group identification. After adding the account to the group, the fraud prevention expert can view the group Links and messages inside. 
+🌐 In addition to contacting non-governmental organizations such as "Cofacts" and "MyGoPen", Dr.Message also cooperates with government agencies. At present, the Ministry of Foreign Affairs, the Taiwan Centers for Disease Control, the Taiwan Food and Drug Administration, and the Criminal Investigation Bureau of the National Police Agency and four other agencies continue to provide structured information for verification. So far, Dr.Message has over 300,000 users. In the past month alone, they have read more than 45 million pieces of information, successfully responded to over one million messages with false or fraudulent information, and a Facebook version of the chatbot is expected to launch in March.
 
- 🌐 In addition to contacting non-governmental teams such as "real and fake Cofacts" and "MyGoPen mai cheating" to use information, the fraud prevention team also cooperates with government units. At present, the Ministry of Foreign Affairs, the Ministry of Health and Welfare, Four agencies, including the Food and Drug Administration and the Criminal Department of the Police Department, continue to provide structured information for verification. So far, fraud prevention experts have more than 300,000 users. In the past month alone, they have read more than 45 million pieces of information, successfully responded to 1 million pieces of false information and fraud information, and are expected to launch in March Facebook version of the robot. 
+🔗 A platform for clarification that allows information to be verified by integrating various parties' databases also echoes the US-Taiwan Tech Challenge's original intentions: proposing innovative technological solutions through cross-sector and cross-platform public collaboration to solve current social issues. 
 
- 🔗 By linking the databases of various parties, the clarification platform that allows information to be verified by multiple parties is also echoed to the original intention of the "US-Taiwan Technology Challenge": to propose innovation through cross-sector and cross-platform public collaboration Technical solutions to solve existing social problems. 
-
- 🚸 The epidemic will eventually pass. In this process, the accumulated mutual trust and friendship from all walks of life, as well as the effects of openness, mutual trust, and collaboration, were the inspiration to me from the masters of fraud prevention, and it was also a good medicine against the means of differentiation. 
+🚸 In the end, the epidemic will pass. In the process, the mutual trust and friendship that has built up from all walks of life, as well as the benefits of openness, mutual trust, and working together, are the lessons given to me from Dr.Message, and they are a good remedy to deal with those methods that would split us apart.
