--- a/_i18n/en/_posts/2020-03-15-口罩實名制的政策權衡.md
+++ b/_i18n/en/_posts/2020-03-15-口罩實名制的政策權衡.md
@@ -1,27 +1,26 @@
 ---
   layout: "post"
-  title: "Apple Column: Policy Weighing of \"Mask Real Name System 2.0\""
+  title: "Design Notes: eMask 2.0"
   excerpt: "Under the condition that the existing health insurance special pharmacy distribution system remains unchanged, new online pre-order channels have been added."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/3dd0ee36ff7ff6447ab517fb5a5d775c2c258f10.jpeg"
-  author: "唐鳳、黃子維"
+  author: "Audrye Tang, Zach Huang"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+🆕 The Executive Yuan has officially launched “eMask 2.0” for preordering masks online, while keeping the current mask distribution systems in pharmacies participating in National Health Insurance. The main purpose of this is, on the one hand, to provide an alternative for people who are having difficulties purchasing masks at pharmacies, due to factors such as time and distance. On the other hand, it is also hoped that this system will ease the tides of people queuing at pharmacies, and solve the shortage of masks in certain areas, thereby increasing the distribution efficiency and usage ratio of masks. Of course, there is room for improvement in any policy, and in the following, we will share with our readers the various policy trade-offs made by the team over the past two weeks.
 
- 🆕 The Executive Yuan formally launched the "Mask Real-name System 2.0". With the existing health insurance special drug bureau distribution system remaining unchanged, online pre-order channels have been added. The main purpose is to allow many people who have difficulty buying masks at the pharmacy due to factors such as time or distance. On the other hand, they also hope to ease the queue of pharmacies and to solve the shortage of masks in some areas. Improve the distribution efficiency and use ratio of the overall mask. Of course, there is room for improvement in any policy. Let me share with readers the following policy trade-offs that the Academy team has had in the past two weeks. 
+💻 Firstly, the [preorder website for eMask 2.0](https://emask.taiwan.gov.tw) was revised from the Ministry of Finance's tax declaration software, which was chosen for qualities such as the stability of its system, and also because it could go online immediately. However, the system needs to be used with a matching card reader, in order to read NHI cards and Citizen Digital Certificates, but this only works on computers, putting cell phone users at a disadvantage.
 
- 💻 First, [the pre-purchase website of "Mask Real-name System 2.0"](https://emask.taiwan.gov.tw/) is a revised version of the tax reporting software of the Ministry of Finance, which is stable and can be used. Get online now and more. However, this system needs to be equipped with a card reader in order to read natural person certificates or health insurance cards, but it can only operate on a computer, which is not friendly to mobile phone users. 
+📶 With this in mind, the government decided to connect eMask 2.0 to the “NHI Quick and Easy Healthcare” mobile app, and greatly expanded the traffic of the front end and back end systems in order to respond to real demand. In this way, the majority of Taiwanese people will have the same opportunities to use eMask 2.0.
 
- 📶 In view of this, in order to allow the vast majority of Chinese people to have the same opportunity to use "mask real-name system 2.0", the government team decided to concatenate the "National Health Insurance Action Autotoll" mobile service, and significantly expanded End system traffic to meet actual needs. 
+📦 Second, various options for the distribution details of eMask 2.0 were discussed, such as 3 masks per person per week, or 6 masks per person every 2 weeks, which is the system currently used by pharmacies, or a one-time allocation of 50 masks. Based on the considerations made by public health professionals, however, the government eventually decided to make the eMask 2.0 system follow the same pattern of pharmacies, in distributing a maximum of 3 masks per person per week, in order to allow as many people as possible to obtain the basic amount of masks required. 
 
- 📦 Second, the distribution of "mask real-name system 2.0", from the comparison of the pharmacy three tablets a week, two Saturdays, to the distribution of fifty tablets, were once the options discussed. However, based on public health professional considerations, in order to allow the most people to obtain the basic masks required, the cycle and number of final exits are still maintained at three tablets a week in line with the pharmacy. 
+⚖️ Thirdly, according to our calculations, the number of masks that can be used for the first round of distribution through eMask 2.0 is approximately 7 million. Calculating for 3 masks per set, it equates to 2.33 million people. In other words, if more than 2.33 million people preorder masks, then there must be an impartial way of determining who will be eligible to collect the masks.
 
- ⚖️ Third, after the inventory, the number of distribution pins that can be used for the first round of "mask real-name system 2.0" is about 7 million masks. Calculated on a set of three pieces, there are 2.33 million groups. In other words, if the number of pre-orders exceeds 2.33 million, there must be a fair way to decide who can qualify for pickup. 
+🆔 Therefore, the team decided that when necessary, a collection list will be generated using a public lottery system. For example, the last digit of the ID card numbers provided by each person will act as an impartial method of identification. Those whose numbers were drawn will each receive an email with a collection number from a designated convenience store.
 
- 🆔 Therefore, the government team decided to use an open balloting method to generate pick-up lists when necessary. For example, the last digit of the ID card number provided by each pre-orderer can be used as a fair discrimination basis, and the successful applicant will receive the pick-up serial number of the designated supermarket through a text message. 
+🎲 The focus here is that the software system will use random numbers to automatically generate the collection list, which in terms of technology, satisfies requirements for fairness. However, it might not be able to meet the high level of social demands for transparency. In comparison, public lottery, while rather primitive, is actually more trustworthy.
 
- 🎲 The important point is that the software system can automatically generate pick-up lists in random numbers, but in terms of technology, it can meet "fairness". But in terms of "transparency", it may not be able to meet high social needs. In contrast, although the lottery is "original", it is more practical. 
-
- ℹ️ Finally, the pre-purchase of "mask real-name system 2.0" adopts the "registration system" rather than the "queuing system". The reason is not first-come-first-served: on the one hand, it hopes to disperse the flow of people and reduce system load pressure; , Also to avoid a few friends who have the ability to write a ticket-grabbing program, crowding out the rights of others. 
+ℹ️ Finally, the preorder website uses a registration system instead of a “first come, first served” queuing system. By this, we hope lower the pressure on the system, so that those few people with the ability to write ticket snatching computer programs would not crowd out the rights of other people.
